# filequeue

./: Cargo.toml  LICENSE  README.md  config.yaml
DEBIAN/: control
scripts/: build-deb  supervisor.conf
src/: errors.rs  filequeue.rs  kafkasink.rs  main.rs
