[package]
name = "filequeue"
version = "0.1.7"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2021"

[dependencies]
libc = "*"
inotify = "*"
rdkafka = "*"
clap = { version = "*", features = ["cargo"] }
error-chain = "*"
byteorder = "*"
log = "*"
slog-envlogger = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
signalbool = "*"

[profile.release]
lto = true
